logging with authorization code flow

--- a/src/ImageGallery.Client/appsettings.json
+++ b/src/ImageGallery.Client/appsettings.json
@@ -7,4 +7,11 @@
     }
   },
   "AllowedHosts": "*"
+  ,"Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:44389"
+      }
+    }
+  }
 }
